Fix alignment of navigation

--- a/css/main.css
+++ b/css/main.css
@@ -95,6 +95,21 @@ nav li {
     line-height: 1.5;
   }
 
+  header {
+    padding: 0 .75rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  ul {
+    text-align: right;
+  }
+
+  nav li {
+    width: auto;
+  }
+
 }
 
 @media only screen and (min-width: 90em) {
